Rename NativeAllocator/Arena and Arena/ScopedArena