@@ -1,126 +1,193 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+ *  Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
- * This code is free software; you can redistribute it and/or modify it
- * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ *  This code is free software; you can redistribute it and/or modify it
+ *  under the terms of the GNU General Public License version 2 only, as
+ *  published by the Free Software Foundation.  Oracle designates this
+ *  particular file as subject to the "Classpath" exception as provided
+ *  by Oracle in the LICENSE file that accompanied this code.
  *
- * This code is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- * version 2 for more details (a copy is included in the LICENSE file that
- * accompanied this code).
+ *  This code is distributed in the hope that it will be useful, but WITHOUT
+ *  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ *  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ *  version 2 for more details (a copy is included in the LICENSE file that
+ *  accompanied this code).
  *
- * You should have received a copy of the GNU General Public License version
- * 2 along with this work; if not, write to the Free Software Foundation,
- * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *  You should have received a copy of the GNU General Public License version
+ *  2 along with this work; if not, write to the Free Software Foundation,
+ *  Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
- * or visit www.oracle.com if you need additional information or have any
- * questions.
+ *   Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ *  or visit www.oracle.com if you need additional information or have any
+ *  questions.
+ *
  */
-
 package java.lang.foreign;
 
 import jdk.internal.foreign.MemorySessionImpl;
 import jdk.internal.javac.PreviewFeature;
+import jdk.internal.ref.CleanerFactory;
 
 /**
- * An arena controls the lifecycle of memory segments, providing both flexible allocation and timely deallocation.
+ * A native allocator is used to allocate native segments.
  * <p>
- * An arena is a native allocator. When the arena is {@linkplain #close() closed},
- * all the segments associated with the arena are invalidated, safely and atomically, their backing memory regions are
- * deallocated (where applicable) and can no longer be accessed:
+ * A native allocator has a <em>lifetime</em> (see {@link #isAlive()}) which determines the temporal
+ * bounds of the memory segments allocated by it. Moreover, a native allocator also determines whether access to
+ * memory segments allocated by it should be {@linkplain #isAccessibleBy(Thread) restricted} to specific threads.
+ * <p>
+ * The simplest native allocator is the {@linkplain Arena#global() global allocator}. The global allocator
+ * features an <em>unbounded lifetime</em>. As such, native segments allocated with the global allocator are always
+ * accessible and their backing regions of memory are never deallocated. Moreover, memory segments allocated with the
+ * global allocator can be {@linkplain MemorySegment#isAccessibleBy(Thread) accessed} from any thread.
+ * {@snippet lang = java:
+ * MemorySegment segment = Arena.global().allocate(100);
+ * ...
+ * // segment is never deallocated!
+ *}
+ * <p>
+ * Alternatively, clients can obtain an {@linkplain Arena#auto() automatic allocator}, that is an allocator
+ * which features a <em>bounded lifetime</em> that is managed, automatically, by the garbage collector. As such, the regions
+ * of memory backing memory segments allocated with the automatic allocator are deallocated at some unspecified time
+ * <em>after</em> the automatic allocator (and all the segments allocated by it) become
+ * <a href="../../../java/lang/ref/package.html#reachability">unreachable</a>, as shown below:
  *
  * {@snippet lang = java:
- * try (Arena arena = Arena.openConfined()) {
- *     MemorySegment segment = arena.allocate((MemoryLayout)100);
- *     ...
- * } // memory released here
+ * MemorySegment segment = Arena.auto().allocate(100);
+ * ...
+ * segment = null; // the segment region becomes available for deallocation after this point
  *}
- *
- * Furthermore, an arena is a {@link SegmentAllocator}. All the segments {@linkplain #allocate(long, long) allocated} by the
- * arena are associated with the arena. This makes arenas extremely useful when interacting with foreign code, as shown below:
+ * Memory segments allocated with the automatic allocator can also be {@linkplain MemorySegment#isAccessibleBy(Thread) accessed} from any thread.
+ * <p>
+ * Finally, clients can use an {@linkplain ScopedArena arena}. An arena features a <em>bounded lifetime</em> which
+ * starts with the arena, and ends when the arena is {@linkplain ScopedArena#close() closed}. As a result,
+ * the regions of memory backing memory segments allocated with an arena are deallocated when the arena is closed.
+ * When this happens, all the segments allocated with the arena become not {@linkplain MemorySegment#isAlive() alive},
+ * and subsequent access operations on these segments will fail {@link IllegalStateException}.
  *
  * {@snippet lang = java:
- * try (Arena arena = Arena.openConfined()) {
- *     MemorySegment nativeArray = arena.allocateArray(ValueLayout.JAVA_INT, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
- *     MemorySegment nativeString = arena.allocateUtf8String("Hello!");
- *     MemorySegment upcallStub = linker.upcallStub(handle, desc, arena);
+ * MemorySegment segment = null;
+ * try (ScopedArena arena = ScopedArena.openConfined()) {
+ *     segment = arena.allocate(100);
  *     ...
- * } // memory released here
+ * } // segment region deallocated here
+ * segment.get(ValueLayout.JAVA_BYTE, 0); // throws IllegalStateException
  *}
  *
- * <h2 id = "thread-confinement">Safety and thread-confinement</h2>
+ * Which threads can {@link MemorySegment#isAccessibleBy(Thread) access} memory segments allocated with an arena depends
+ * on the arena kind. For instance, segments allocated with a {@linkplain ScopedArena#openConfined() confined arena}
+ * can only be accessed by the thread that created the arena. Conversely, segments allocated with a
+ * {@linkplain ScopedArena#openConfined() shared arena} can be accessed by any thread.
  *
- * Arenas provide strong temporal safety guarantees: a memory segment allocated by an arena cannot be accessed
- * <em>after</em> the arena has been closed. The cost of providing this guarantee varies based on the
- * number of threads that have access to the memory segments allocated by the arena. For instance, if an arena
- * is always created and closed by one thread, and the memory segments associated with the arena are always
- * accessed by that same thread, then ensuring correctness is trivial.
- * <p>
- * Conversely, if an arena allocates segments that can be accessed by multiple threads, or if the arena can be closed
- * by a thread other than the accessing thread, then ensuring correctness is much more complex. For example, a segment
- * allocated with the arena might be accessed <em>while</em> another thread attempts, concurrently, to close the arena.
- * To provide the strong temporal safety guarantee without forcing every client, even simple ones, to incur a performance
- * impact, arenas are divided into <em>thread-confined</em> arenas, and <em>shared</em> arenas.
- * <p>
- * Confined arenas, support strong thread-confinement guarantees. Upon creation, they are assigned an
- * {@linkplain #isCloseableBy(Thread) owner thread}, typically the thread which initiated the creation operation.
- * The segments created by a confined arena can only be {@linkplain MemorySegment#isAccessibleBy(Thread) accessed}
- * by the owner thread. Moreover, any attempt to close the confined arena from a thread other than the owner thread will
- * fail with {@link WrongThreadException}.
- * <p>
- * Shared arenas, on the other hand, have no owner thread. The segments created by a shared arena
- * can be {@linkplain MemorySegment#isAccessibleBy(Thread) accessed} by any thread. This might be useful when
- * multiple threads need to access the same memory segment concurrently (e.g. in the case of parallel processing).
- * Moreover, a shared arena {@linkplain #isCloseableBy(Thread) can be closed} by any thread.
+ * @implSpec
+ * Implementations of this interface are thread-safe.
+ *
+ * @see ScopedArena
+ * @see MemorySegment
  *
  * @since 20
  */
-@PreviewFeature(feature=PreviewFeature.Feature.FOREIGN)
-public non-sealed interface Arena extends NativeAllocator, AutoCloseable {
+@PreviewFeature(feature =PreviewFeature.Feature.FOREIGN)
+public sealed interface Arena extends SegmentAllocator permits ScopedArena, MemorySessionImpl {
 
     /**
-     * Closes this arena. If this method completes normally, the segments associated with this arena
-     * are no longer {@linkplain MemorySegment#isAlive() alive}, and can no longer be accessed.
-     * Furthermore, any off-heap region of memory backing the segments associated with this arena are also released.
-     *
-     * @apiNote This operation is not idempotent; that is, closing an already closed arena <em>always</em> results in an
-     * exception being thrown. This reflects a deliberate design choice: failure to close an arena might reveal a bug
-     * in the underlying application logic.
+     * Returns {@code true}, if this allocator is alive. Segments allocated by this allocator can only
+     * be accessed if this allocator is alive.
      *
      * @see MemorySegment#isAlive()
+     * @return {@code true}, if this allocator is alive.
+     */
+    boolean isAlive();
+
+    /**
+     * Returns {@code true}, if the provided thread can access this allocator. Access to segments allocated by this allocator
+     * is restricted in a similar fashion. That is, if an allocator can only be accessed by a single thread {@code T},
+     * then all the segments allocated by that allocator can only be accessed by that same thread {@code T}.
      *
-     * @throws IllegalStateException if the arena has already been closed.
-     * @throws IllegalStateException if one or more segments associated with this arena is being
-     * {@linkplain MemorySegment#whileAlive(Runnable) kept alive}.
+     * @see MemorySegment#isAccessibleBy(Thread)
+     * @param thread the thread to be tested.
+     * @return {@code true}, if the provided thread can access this allocator.
+     */
+    boolean isAccessibleBy(Thread thread);
+
+    /**
+     * Returns a native memory segment with the given size (in bytes) and alignment constraint (in bytes).
+     * <p>
+     * The temporal bounds of the returned segments are determined by this allocator's lifetime. That is,
+     * the returned segment can only be accessed as long as this allocator is {@linkplain #isAlive() alive}.
+     * <p>
+     * The returned segment's {@link MemorySegment#address() address} is the starting address of the
+     * allocated off-heap memory region backing the segment, and the address is
+     * aligned according the provided alignment constraint.
+     *
+     * @implSpec
+     * Implementations of this method must return a native segment featuring the requested size,
+     * and that is compatible with the provided alignment constraint. Furthermore, for any two segments
+     * {@code S1, S2} returned by this method, the following invariant must hold:
+     *
+     * {@snippet lang = java:
+     * S1.overlappingSlice(S2).isEmpty() == true
+     *}
+     *
+     * @param byteSize the size (in bytes) of the off-heap memory block backing the native memory segment.
+     * @param byteAlignment the alignment constraint (in bytes) of the off-heap region of memory backing the native memory segment.
+     * @return a new native memory segment.
+     * @throws IllegalArgumentException if {@code bytesSize < 0}, {@code alignmentBytes <= 0}, or if {@code alignmentBytes}
+     * is not a power of 2.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code isCloseableBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if this allocator is no longer {@linkplain #isAlive() alive}.
      */
     @Override
-    void close();
+    MemorySegment allocate(long byteSize, long byteAlignment);
 
     /**
-     * {@return {@code true} if the provided thread can close this arena}
-     * @param thread the thread to be tested.
+     * Creates a native segment with the given address, and cleanup action.
+     * <p>
+     * The temporal bounds of the returned segments are determined by this allocator's lifetime. That is,
+     * the returned segment can only be accessed as long as this allocator is {@linkplain #isAlive() alive}.
+     * <p>
+     * The returned segment's {@link MemorySegment#address() address} is the provided address, which presumably
+     * denotes the starting address of some externally allocated off-heap memory region. The size of the returned
+     * segment is 0. That is, the returned segment is a <a href="MemorySegment.html#wrapping-addresses">zero-length memory segment</a>.
+     * The returned segment can be {@link MemorySegment#asUnboundedSlice() resized unsafely}.
+     * <p>
+     * The returned segment is not read-only (see {@link MemorySegment#isReadOnly()}).
+     * <p>
+     * This method can be useful when interacting with custom memory sources (e.g. custom allocators),
+     * where an address to some underlying region of memory is typically obtained from foreign code
+     * (often as a plain {@code long} value).
+     * <p>
+     * The provided cleanup action (if any) will be invoked when the returned segment becomes not {@linkplain MemorySegment#isAlive() alive}.
+     *
+     * @param address the returned segment's address.
+     * @param cleanupAction the custom cleanup action to be associated to the returned segment (can be null).
+     * @return a native segment with the given address and cleanup action (if any).
+     * @throws WrongThreadException if this method is called from a thread {@code T},
+     * such that {@code isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if this allocator is no longer {@linkplain #isAlive() alive}.
      */
-    boolean isCloseableBy(Thread thread);
+    MemorySegment wrap(long address, Runnable cleanupAction);
 
     /**
-     * {@return a new confined arena, owned by the current thread}
+     * Obtains an automatic allocator. The lifetime of an automatic allocator is managed, implicitly,
+     * by the garbage collector. That is, an automatic allocator remains {@linkplain #isAlive() alive} as long
+     * as it (or any of the segments allocated by it) is kept reachable. Moreover, an automatic allocator
+     * can be {@linkplain #isAccessibleBy(Thread)} accessed by any thread.
+     *
+     * @return a new automatic allocator.
      */
-    static Arena openConfined() {
-        return MemorySessionImpl.createConfined(Thread.currentThread());
+    static Arena auto() {
+        return MemorySessionImpl.createImplicit(CleanerFactory.cleaner());
     }
 
     /**
-     * {@return a new shared arena}
+     * Obtains the global allocator. The global allocator is always {@linkplain #isAlive() alive}
+     * and can be {@linkplain MemorySegment#isAccessibleBy(Thread) accessed} by any thread.
+     *
+     * @return the global allocator.
      */
-    static Arena openShared() {
-        return MemorySessionImpl.createShared();
+    static Arena global() {
+        return MemorySessionImpl.GLOBAL;
     }
 }
